--- a/essential_mm/static/index.css
+++ b/essential_mm/static/index.css
@@ -2,6 +2,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     color: white;
+    overflow: visible;
 }
 
 div {
@@ -17,7 +18,7 @@ div {
     left: 10px;
     top: 10px;
     height: 200px;
-    width: 250px;
+    width: 300px;
 }
 
 #ur {
@@ -25,7 +26,7 @@ div {
     right: 10px;
     top: 10px;
     height: 200px;
-    width: 46%;
+    width: 44%;
     text-align: right;
 }
 
@@ -40,7 +41,6 @@ div {
     font-family: 'Righteous', cursive;
     position: absolute;
     left: 10px;
-    top: 530px;
     bottom: 10px;
     right: 10px;
     text-align:center;
