--- a/essential_mm/static/index.css
+++ b/essential_mm/static/index.css
@@ -2,7 +2,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     color: white;
-    overflow: visible;
+    overflow: hidden;
 }
 
 div {
