--- a/essential_mm/static/index.css
+++ b/essential_mm/static/index.css
@@ -31,11 +31,14 @@ div {
 }
 
 #center {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 30px;
     position: absolute;
-    left: 10px;
-    top: 220px;
-    height: 300px;
-    right: 10px;
+    top: 50%;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
 #footer {
     font-family: 'Righteous', cursive;
